# v2scope

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  LICENSE.md  README.md  eslint.config.js  flake.nix  package-lock.json  package.json  vite.config.js
docs/: status.md  todos.md
docs/plans/: 00-current-overview.md  01-c-transport-and-channels.md  02-rust-ts-boundary.md  03-ui-plan.md  03A-runtime-plan.md  03B-ui-plan.md  04-protocol-versioning.md  devices-ui.md  ui-ideas.md  ui-schema.md
docs/reference/: crsf-protocol.md
onboard/: PROTOCOL.md  interface.c  logger.c  vscope.c  vscope.h
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__init.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  serial.rs
src/lib/: errors.test.ts  errors.ts  index.ts  runtime.ts  tauri.ts  types.ts
src/lib/components/: app-shell.svelte  app-sidebar.svelte  nav-main.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte  settings-modal.svelte
src/lib/db/: index.ts  ports.ts  snapshots.ts
src/lib/liveplot/: history.test.ts  history.ts
src/lib/ports/: index.ts  schema.ts  store.ts
src/lib/protocol/: bytes.test.ts  bytes.ts  codec.test.ts  codec.ts  device-info.ts  index.ts  restructure.d.ts  schemas.ts  types.ts
src/lib/runtime/: DeviceManager.ts  DeviceService.ts  RuntimeService.ts  command-policy.test.ts  command-policy.ts  devices.ts  index.ts  runtime-resilience.test.ts  store.ts
src/lib/services/: index.ts  (+3 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
(+148 files in other folders)
